000 - fix ball tracker width on mobile

--- a/components/soccer/match-detail/tabs/match-info-tab/style.scss
+++ b/components/soccer/match-detail/tabs/match-info-tab/style.scss
@@ -35,6 +35,10 @@
             font-size: 0.5rem;
         }
     }
+
+    .mobile & {
+        width: 100%;
+    }
 }
 
 .info-tab {
